# local-cli-agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROMOTION.md  README.md  install.bat  install.sh  kimi.py  pyproject.toml  uninstall.bat  uninstall.sh
.github/: FUNDING.yml
.github/DISCUSSION_TEMPLATE/: general.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: tests.yml
local_cli_agent/: __init__.py  _env.py  agent.py  api.py  autotest.py  backends.py  changelog.py  cli.py  config.py  constants.py  executor.py  memory.py  mission.py  model_selector.py  orchestrator.py  profiles.py  project.py  rendering.py  repomap.py  settings.py  tools.py  ui.py  undo.py  watcher.py  web.py
plugins/: timestamp.py
tests/: test_changelog.py  test_config.py  test_constants.py  test_executor.py  test_git_autocommit.py  test_memory.py  test_rendering.py  test_repomap.py  test_web.py
