[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "kimi-k-cli"
version = "1.2.0"
description = "Kimi K2.5 Agent CLI - Self-improving AI coding assistant with full tool use"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "suebi76"}
]
dependencies = [
    "requests",
]

[project.scripts]
kimi-k = "kimi:main"

[tool.setuptools]
py-modules = ["kimi"]
